chore: ensure proper styling for editor overflow

--- a/app/views/app/forms/styles/generator.blade.css
+++ b/app/views/app/forms/styles/generator.blade.css
@@ -19,3 +19,7 @@
 .ck-powered-by-balloon {
     display: none !important;
 }
+
+#editor {
+    overflow-y: auto;
+}
